feat: Agregar parámetro 'scope' a la ruta de productos y actualizar ejemplos de usuario en la documentación Swagger
